2023/03/14 팔로잉, 팔로워, 사진 모달 추가

--- a/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
@@ -23,11 +23,11 @@
     <link rel="stylesheet" th:href="@{/css/profileModify.css}"/>
     <link rel="stylesheet" th:href="@{/css/post.css}"/>
     <script th:src="@{/js/aside.js}"></script>
-    <script th:src="@{/js/proFollow.js}"></script>
-    <script th:src="@{/js/proPreview.js}"></script>
-    <script th:src="@{/js/proUpload.js}"></script>
+    <script th:src="@{/js/profileUpload.js}"></script>
+    <script th:src="@{/js/profileModal.js}"></script>
     <script th:src="@{/js/post.js}"></script>
     <script th:src="@{/js/counting.js}"></script>
+    <script th:src="@{/js/myFollow.js}"></script>
 </head>
 <body>
     <main>
