--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -1,118 +1,118 @@
-* {
-    margin: 0;
-    padding: 0;
-    font: normal 'Arial';
-}
+    * {
+        margin: 0;
+        padding: 0;
+        font: normal 'Arial';
+    }
 
-ul, ol {list-style: none;}
-a {text-decoration: none; color: #111;}
-input, textarea {outline: none;}
+    ul, ol {list-style: none;}
+    a {text-decoration: none; color: #111;}
+    input, textarea {outline: none;}
 
-#pro {
-    width: 1000px;
-    margin-top:20px;
-    margin-left:500px;
-}
-#pro > section {width: 100%;}
-#pro > section > div {display: block;}
+    #pro {
+        width: 1000px;
+        margin-top:20px;
+        margin-left:500px;
+    }
+    #pro > section {width: 100%;}
+    #pro > section > div {display: block;}
 
-#pro > section > .myProfile {
-    width: 100%;
-    height: 200px;
-    position: relative; 
-    display: block; 
-    border-bottom: 1px solid #e9e9e9; 
-}
-#pro > section > .myProfile > .proPhoto {
-    float: left; 
-    margin-top: 20px; 
-    margin-left:100px; 
-    margin-right:100px; 
-    width: 200px;
-}
-#pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
-#pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
-#pro > section > .myProfile > .proPhoto > div > a > img {width: 100%; height: 100%; object-fit: cover;}
-#pro > section > .myProfile > .detail {float:left; width:500px;}
-#pro > section > .myProfile > .detail > .pTop {
-    display: block; 
-    margin-top: 30px; 
-    position: relative; 
-    width: auto; 
-    height: 40px;
-}
-#pro > section > .myProfile > .detail > .pTop > .userName {
-    float:left; 
-    padding-right:15px; 
-    font-size: 24px;
-    height: 40px;
-    line-height: 40px;
-}
-#pro > section > .myProfile > .detail > .pTop > .button {
-    margin: 2px;
-    padding: 9px 15px;
-    background: #e9e9e9;
-    font-size: 13px;
-    top: 10px;
-    position: inherit;
-}
-#pro > section > .myProfile > .detail > .pTop > #follow {
-    background: #32a4ff; 
-    color: aliceblue; 
-    font-weight: bold;
-}
-#pro > section > .myProfile > .detail > .pMiddle {
-    display: block; 
-    margin-top: 20px; 
-    width: 500px; 
-    height: 40px; 
-    overflow: hidden;
-}
-#pro > section > .myProfile > .detail > .pMiddle > li {
-    box-sizing: border-box; 
-    margin-right:35px; 
-    float: left;
-    font-size:15px;
-    width: 100px;
-}
-#pro > section > .myProfile > .detail > .pMiddle > li > span {
-    font-size: 16px;
-    font-weight: bold;
-    margin-left: 5px;
-}
-#pro > section > .myProfile > .detail > .pMiddle > li > a {font-size:15px;}
-#pro > section > .myProfile > .detail > .pMiddle > li > a > span {font-size:16px; font-weight:bold; margin-left:5px;}
+    #pro > section > .myProfile {
+        width: 100%;
+        height: 200px;
+        position: relative;
+        display: block;
+        border-bottom: 1px solid #e9e9e9;
+    }
+    #pro > section > .myProfile > .proPhoto {
+        float: left;
+        margin-top: 20px;
+        margin-left:100px;
+        margin-right:100px;
+        width: 200px;
+    }
+    #pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
+    #pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
+    #pro > section > .myProfile > .proPhoto > div > a > img {width: 100%; height: 100%; object-fit: cover;}
+    #pro > section > .myProfile > .detail {float:left; width:500px;}
+    #pro > section > .myProfile > .detail > .pTop {
+        display: block;
+        margin-top: 30px;
+        position: relative;
+        width: auto;
+        height: 40px;
+    }
+    #pro > section > .myProfile > .detail > .pTop > .userName {
+        float:left;
+        padding-right:15px;
+        font-size: 24px;
+        height: 40px;
+        line-height: 40px;
+    }
+    #pro > section > .myProfile > .detail > .pTop > .button {
+        margin: 2px;
+        padding: 9px 15px;
+        background: #e9e9e9;
+        font-size: 13px;
+        top: 10px;
+        position: inherit;
+    }
+    #pro > section > .myProfile > .detail > .pTop > #follow {
+        background: #32a4ff;
+        color: aliceblue;
+        font-weight: bold;
+    }
+    #pro > section > .myProfile > .detail > .pMiddle {
+        display: block;
+        margin-top: 20px;
+        width: 500px;
+        height: 40px;
+        overflow: hidden;
+    }
+    #pro > section > .myProfile > .detail > .pMiddle > li {
+        box-sizing: border-box;
+        margin-right:35px;
+        float: left;
+        font-size:15px;
+        width: 100px;
+    }
+    #pro > section > .myProfile > .detail > .pMiddle > li > span {
+        font-size: 16px;
+        font-weight: bold;
+        margin-left: 5px;
+    }
+    #pro > section > .myProfile > .detail > .pMiddle > li > a {font-size:15px;}
+    #pro > section > .myProfile > .detail > .pMiddle > li > a > span {font-size:16px; font-weight:bold; margin-left:5px;}
 
-#pro > section > .myProfile > .detail > .pAbout > .notice {font-size: 15px;}
+    #pro > section > .myProfile > .detail > .pAbout > .notice {font-size: 15px;}
 
-#pro > section > .myNav {
-    padding-top: 30px; 
-    width: 400px; 
-    margin-right: 300px; 
-    margin-left: 300px; 
-    text-align: center;
-}
-#pro > section > .myNav > div:nth-child(1) {margin-left: 50px;}
-#pro > section > .myNav > div {
-    float: left; 
-    padding-left: 30px; 
-    padding-right: 30px;
-}
-#pro > section > .myNav > div > a {color: #888;}
-#pro > section > .myNav > div > a:hover {color: #111;}
+    #pro > section > .myNav {
+        padding-top: 30px;
+        width: 400px;
+        margin-right: 300px;
+        margin-left: 300px;
+        text-align: center;
+    }
+    #pro > section > .myNav > div:nth-child(1) {margin-left: 50px;}
+    #pro > section > .myNav > div {
+        float: left;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    #pro > section > .myNav > div > a {color: #888;}
+    #pro > section > .myNav > div > a:hover {color: #111;}
 
-#pro > section > .myList {margin-top: 50px;}
-#pro > section > .myList > .pic {
-    float:left;
-    margin: 5px;
-}
-#pro > section > .myList > .pic > a {
-    display: block;
-    width: 300px;
-    height: 300px;
-    overflow: hidden;
-}
-#pro > section > .myList > .pic > a > img {width: 100%; height: 100%; object-fit:cover;}
+    #pro > section > .myList {margin-top: 50px;}
+    #pro > section > .myList > .pic {
+        float:left;
+        margin: 5px;
+    }
+    #pro > section > .myList > .pic > a {
+        display: block;
+        width: 300px;
+        height: 300px;
+        overflow: hidden;
+    }
+    #pro > section > .myList > .pic > a > img {width: 100%; height: 100%; object-fit:cover;}
 
   .fModal {
     display: none;
@@ -152,18 +152,6 @@ input, textarea {outline: none;}
     font-size: 28px;
   }
 
-  .fClose:hover,
-  .fClose:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  .addProf:hover,
-  .addProf:focus {
-    cursor: pointer;
-  }
-
   .peopleFollow {
     background-color: #fefefe;
     margin: 15% auto;
@@ -172,29 +160,19 @@ input, textarea {outline: none;}
     border-radius: 10px;
   }
 
-  .closeFollow {
+  .closeFollow, .closeFollowing {
     color: #aaa;
     float: right;
     font-size: 28px;
     margin-right: 5px;
   }
 
+  .fClose:hover,
+  .fClose:focus,
+  .closeFollowing:hover,
+  .closeFollowing:focus,
   .closeFollow:hover,
   .closeFollow:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  .closeFollowing {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    margin-right: 5px;
-  }
-
-  .closeFollowing:hover,
-  .closeFollowing:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
@@ -212,8 +190,8 @@ input, textarea {outline: none;}
   }
   .fList > li {width: 350px; height: 50px; display: inline-block; padding: 5px;}
   .fList > li > a:nth-child(1) {float:left; display: block; width: 280px; height: 45px; line-height: 45px;}
+    .fList > li > a:nth-child(3) {width: 55px; height: 40px; line-height: 40px; vertical-align: middle;}
   .fList > li > a:nth-child(2) {width: 55px; height: 40px; line-height: 40px; vertical-align: middle;}
-  .fList > li > a:nth-child(3) {width: 55px; height: 40px; line-height: 40px; vertical-align: middle;}
   .fList > li > a > h1 {height: 45px; float: left; font-size: 14px; margin-left: 10px; vertical-align: middle; line-height: 45px;}
   .fList > li > a > div {float: left; width: 45px; height: 45px; border-radius: 70%; overflow: hidden;}
   .fList > li > a > div > img {width: 100%; height: 100%; line-height: 55px; vertical-align: middle; object-fit: cover;}
@@ -224,12 +202,6 @@ input, textarea {outline: none;}
     position: relative;
     background-color: #32a4ff;
    }
-   .userFollow > span:nth-child(1) {
-        position: absolute;
-        color: white;
-        left: 10px;
-        top: 10px;
-    }
 
     .aFloatRight > .spinner {
         position: absolute;
@@ -246,10 +218,100 @@ input, textarea {outline: none;}
     }
 
   .userFollowing {position: relative; background: #e9e9e9;}
-  .userFollowing > span:nth-child(1) {
-    position: absolute;
-    color: black;
-    left: 10px;
-    top: 10px;
-  }
+  .userSelect {position: relative; background: #e9e9e9;}
+
+    .photoModal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-color: rgba(0,0,0,0.4);
+      -ms-overflow-style: none;
+    }
+    .photoModal::-webkit-scrollbar {display: none;}
+
+    .photoContents {
+      background-color: #fefefe;
+      margin: 15% auto;
+      border: 1px solid #888;
+      width: 400px;
+      border-radius: 10px;
+    }
+
+    .photoContents > #photoTop {height:80px; position: relative; text-align: center; line-height: 90px; vertical-align: middle; }
+    .photoContents > #photoTop > span {font-size: 20px;}
+    .photoContents > #photoBottom {border-top: 1px solid #e9e9e9;}
+    .photoContents > #photoBottom > li {display: block; height: 40px; box-sizing: border-box; font-size: 14px; text-align: center; line-height: 40px; vertical-align: middle; font-weight: bold;}
+    .photoContents > #photoBottom > .addProf {color: #32a4ff; border-bottom: 1px solid #e9e9e9;}
+    .photoContents > #photoBottom > .deleteProf {color: red; border-bottom: 1px solid #e9e9e9;}
+
+   .addProf:hover,    .addProf:focus,
+   .addNewProf:hover, .addNewProf:focus,
+   .deleteProf:hover, .deleteProf:focus,
+   .photoClose:hover, .photoClose:focus
+   {
+     cursor: pointer;
+   }
+
+   .profileSpinner {
+        position: absolute;
+        display: none;
+        width: 150px;
+        height: 150px;
+        left: 100px;
+        top: 20px;
+        background-image: url(../img/GIF/spinner.gif);
+        background-size: auto;
+        background-repeat: no-repeat;
+        background-color: white;
+        background-position: center;
+        border-radius: 70%;
+   }
+
+    #followerDelete > .secondModal {
+      background-color: #fefefe;
+      margin: 15% auto;
+      border: 1px solid #888;
+      width: 400px;
+      border-radius: 10px;
+      box-sizing: border-box;
+    }
+    #followingCancel > .secondModal {
+      background-color: #fefefe;
+      margin: 15% auto;
+      border: 1px solid #888;
+      width: 400px;
+      border-radius: 10px;
+      box-sizing: border-box;
+    }
+
+    .secondModalFrame {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-color: rgba(0,0,0,0.4);
+      -ms-overflow-style: none;
+    }
+    .secondModalFrame::-webkit-scrollbar {display: none;}
+
+    .secondModal > div {display: block; width:400px; height: 200px; position: relative; text-align: center; padding: 20px; box-sizing: border-box;}
+    .secondModal > div > img {display: inline-block; width: 75px; height: auto;}
+    .secondModal > div > h1 {text-align: center; font-size: 14px; margin-top: 5px;}
+    .secondModal > div > h1 > span {font-weight: bold; font-size: 15px;}
+
+    .secondModal > ul {text-align: center;}
+    .secondModal > ul > li {text-align: center; border-top:1px solid #e9e9e9; display: block; height: 50px; line-height: 50px; box-sizing: border-box;}
+    .secondModal > ul > li > a {font-size: 14px; font-weight: bold;}
+    .secondModal > ul > li:nth-child(1) > a {color: red;}
+
+
 
