2023/03/14 아이디 찾기 구현 중

--- a/Spring/Photostagram/src/main/resources/static/css/member.css
+++ b/Spring/Photostagram/src/main/resources/static/css/member.css
@@ -580,3 +580,10 @@ option {
 .result-txt.on {
     display: block;
 }
+
+.check-txt {
+    display: none;
+}
+.check-txt.on {
+    display: block;
+}
