--- a/Spring/Photostagram/src/main/resources/templates/layout/memberLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/memberLayout.html
@@ -22,5 +22,6 @@
 <th:block layout:fragment="script">
   <script th:src="@{/js/member.js}"></script>
   <script th:src="@{/js/register.js}"></script>
+  <script th:src="@{/js/searching.js}"></script>
 </th:block>
 </html>
