--- a/Spring/Photostagram/src/main/resources/templates/member/login.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/login.html
@@ -62,8 +62,8 @@
                                     <span>Facebook으로 로그인</span>
                                 </button>
                             </div>
-                            <a href="./checkId.html" class="forgot-pw">아이디를 잊으셨나요?</a>
-                            <a href="./checkPass.html" class="forgot-pw">비밀번호를 잊으셨나요?</a>
+                            <a th:href="@{/member/checkId}" class="forgot-pw">아이디를 잊으셨나요?</a>
+                            <a th:href="@{/member/checkPass}" class="forgot-pw">비밀번호를 잊으셨나요?</a>
                         </div>
                     </div>
                     <div class="box goto">
