--- a/Spring/Photostagram/src/main/resources/templates/member/checkPass.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/checkPass.html
@@ -18,7 +18,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="animate-input">
-                                    <span>
+                                    <span class="in-out">
                                         아이디 입력
                                     </span>
                                     <input type="text">
@@ -26,7 +26,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="animate-input">
-                                    <span>
+                                    <span class="in-out">
                                         성명 입력
                                     </span>
                                     <input type="text">
@@ -34,7 +34,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="animate-input">
-                                    <span>
+                                    <span class="in-out">
                                         이메일 입력
                                     </span>
                                     <input type="text">
