--- a/Spring/Photostagram/src/main/resources/templates/member/email.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/email.html
@@ -2,6 +2,7 @@
 <html  xmlns:th="http://www.thymeleaf.org"
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
        layout:decorate="layout/memberLayout">
+
 <th:block layout:fragment="main">
 <main class="member">
     <div class="container">
@@ -16,14 +17,14 @@
                             <div class="birth">
                                 <p>인증 코드 입력</p>
                                 <div>
-                                    email1234@naver.com 주소로 전송된 인증 <br>
+                                    <span id="userEmail">email1234@naver.com</span> 주소로 전송된 인증 <br>
                                     코드를 입력하세요.
                                     <a href="#">코드 재전송</a>
                                 </div>
                             </div>
                             <form action="#">
                                 <div class="email-input">
-                                    <input type="text" placeholder="인증코드">
+                                    <input type="text" name="input-code" placeholder="인증코드">
                                 </div>
                                 <div class="btn-group">
                                     <button type="submit" class="btn-login" id="email-next">
