--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -601,6 +601,20 @@ html {height: 100%;}
         height: 48px;
       }
 
+      .spinner {
+              position: absolute;
+              display: none;
+              width: 100%;
+              height: 100%;
+              left: 0;
+              top: 0;
+              background-image: url(../img/GIF/spinner.gif);
+              background-size: contain;
+              background-repeat: no-repeat;
+              background-color: white;
+              background-position: center;
+          }
+
       .followBtn{
         border: none;
         background: #0095f6;
